grammar.bnf
Keywords = YADI, NATRA, DEKHAU, GHUMAU, PATAK, RAKHA, MA, BARABAR, CHHAINA, 
            SANO, THULO, JABASAMMA, SAHI, GALAT

<program> ::= <statement-list>

<statement-list> ::= <statement> | <statement> <statement-list>

<statement> ::= <yadi-statement> | <dekhau-statement> | <ghumau-statement> | 
                <jabasamma-statement> | <rakha-statement> | <group-statement> | <karya-statement>

<block-statement> ::= SURU <statement-list> ANTYA

<karya-statement> ::= KARYA <variable>([<parameter-list>]) <statement>

<yadi-statement> ::= YADI <boolean> <statement> [NATRA <statement>]

<ghumau-statement> ::= GHUMAU <expression> PATAK [|<variable>|] <statement>

<jabasamma-statement> ::= JABASAMMA <boolean> <statement>

<rakha-statement> ::= RAKHA <variable> MA <expression>;

<dekhau-statement> ::= DEKHAU <expression>;

<parameter-list> ::= <variable> | <variable> , <parameter-list>

<variable> ::= [a-z-A-Z]+[a-zA-Z0-9_]*?

<number> ::= [0-9]+

<string> ::= "[^"]*"

<boolean> ::= SAHI | GALAT | <condition>

<condition> ::= [CHHAINA] <expression> <relational-operator> <expression>

<expression> :: = <addition>

<addition> ::= <factor> | <factor> <addition-operator> <expression>

<factor> ::= <primary> | <primary> <multiplication-operator> <expression>

<primary> ::= (<expression>) | <variable> | <string> | <number> | <boolean>

<addition-operator> ::= + | -

<multiplication-operator> ::= * | /

<power-operator> ::= **
